overflow problem fix

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -255,3 +255,7 @@ section.page-top {
 .btn:focus {
   box-shadow: none !important;
 }
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
